Remove duplicate line